<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/palm"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:textColor="#080808"
                android:textSize="23sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/palm"
                />

            <ImageView
                android:id="@+id/image"
                android:layout_alignParentTop="true"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="65dp"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/afif" />

        </RelativeLayout>

        <TextView
            android:id="@+id/imgtext4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="0dp"/>
        <TextView
            android:id="@+id/imgtext5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/afifhusain2014gmailcom"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="0dp"/>
        <TextView
            android:id="@+id/imgtext6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="0dp"/>

        <TextView
            android:id="@+id/imgtext7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="0dp"/>



    </LinearLayout>


</ScrollView>